--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
       background-image: url("https://raw.githubusercontent.com/X1vova1X/pngs/main/bg.png");
       background-repeat: no-repeat;
       background-size: cover;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .button {
+      margin-top: 50px;
+      margin-right: 50px;
     }
   </style>
 </head>
 <body>
+  <button class="button">Кнопка</button>
 </body>
 </html>
