--- a/index.html
+++ b/index.html
@@ -7,18 +7,38 @@
       background-repeat: no-repeat;
       background-size: cover;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
 
     .button {
-      margin-top: 50px;
-      margin-right: 50px;
+      position: absolute;
+      top: 70%;
+      left: 70%;
+      transform: translate(-50%, -50%);
+      padding: 20px 40px;
+      font-size: 18px;
+      background-color: black;
+      color: white;
+      border-radius: 10px;
+      border: none;
+      display: flex;
+      align-items: center;
+    }
+
+    .discord-logo {
+      width: 50px;
+      height: 50px;
+      margin-right: 10px;
     }
   </style>
 </head>
 <body>
-  <button class="button">Кнопка</button>
+  <button class="button">
+    <img class="discord-logo" src="https://raw.githubusercontent.com/X1vova1X/pngs/main/discord-logo.png" alt="Discord Logo">
+    Добавить в Discord
+  </button>
 </body>
 </html>
