--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       top: 70%;
       left: 70%;
       transform: translate(-50%, -50%);
-      padding: 20px 40px;
+      padding: 15px 40px;
       font-size: 18px;
       background-color: black;
       color: white;
@@ -26,6 +26,7 @@
       border: none;
       display: flex;
       align-items: center;
+      cursor: pointer; /* Изменяем вид курсора на палец */
     }
 
     .discord-logo {
@@ -36,9 +37,11 @@
   </style>
 </head>
 <body>
-  <button class="button">
-    <img class="discord-logo" src="https://raw.githubusercontent.com/X1vova1X/pngs/main/discord-logo.png" alt="Discord Logo">
-    Добавить в Discord
-  </button>
+  <a href="https://discord.com/api/oauth2/authorize?client_id=1154878672965210192&permissions=8&scope=bot" target="_blank">
+    <button class="button">
+      <img class="discord-logo" src="https://raw.githubusercontent.com/X1vova1X/pngs/main/discord-logo.png" alt="Discord Logo">
+      Добавить в Discord
+    </button>
+  </a>
 </body>
 </html>
